src/objects/Attivita_Marketing__c.object
<CustomObject>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Advisor</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Gift</relationshipLabel>
        <relationshipName>Marketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>The customer doesn&apos;t have marketing consent.</errorMessage>
            <filterItems>
                <field>Account.Privacy_1__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Privacy2__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Privacy1__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift</relationshipLabel>
        <relationshipName>Attivit_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dati_Deduplica__c</fullName>
        <formula>Cliente__c &amp;  Tipologia_Attivita__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dati Deduplica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dettaglio_Transazione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio Transazione</label>
        <referenceTo>Transaction_Detail__c</referenceTo>
        <relationshipName>Attivit_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nota_BC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nota BC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Image_Reference__c</fullName>
        <label>Product Image Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IF(Product_Image_Reference__c != &apos;&apos;, SUBSTITUTE(IMAGE(&apos;/sfc/servlet.shepherd/version/download/$$$$$$$$$$$$$&apos;, &apos;product image&apos;,70,70) &amp; IF( ISPICKVAL(Dettaglio_Transazione__r.Tipo_Vendita__c, &apos;R&apos;), IMAGE(&apos;/resource/Close&apos;,&apos;none&apos;,25,25) , IMAGE(&apos;/resource/Approval&apos;,&apos;none&apos;,25,25)), &apos;$$$$$$$$$$$$$&apos;,  Product_Image_Reference__c ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Thumbnail__c</fullName>
        <formula>IF(Product_Image_Reference__c != &apos;&apos;, SUBSTITUTE(IMAGE(&apos;/sfc/servlet.shepherd/version/download/$$$$$$$$$$$$$&apos;, &apos;product image&apos;) &amp; IF( ISPICKVAL(Dettaglio_Transazione__r.Tipo_Vendita__c, &apos;R&apos;), IMAGE(&apos;/resource/Close&apos;,&apos;none&apos;,25,25) , IMAGE(&apos;/resource/Approval&apos;,&apos;none&apos;,25,25)), &apos;$$$$$$$$$$$$$&apos;, Product_Image_Reference__c ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prodotto</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Attivit_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product__r.Item_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_Attivit_picklist__c</fullName>
        <label>Gift Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flowers</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Cake</fullName>
                </value>
                <value>
                    <fullName>Olive oil</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Tickets</fullName>
                </value>
                <value>
                    <fullName>Dream of Solomeo</fullName>
                </value>
                <value>
                    <fullName>Other books (specify in Note)</fullName>
                </value>
                <value>
                    <fullName>Other (specify in Note)</fullName>
                </value>
                <value>
                    <fullName>Book: The Dream of Solomeo</fullName>
                    <isActive>false</isActive>
                    <label>Book: The Dream of Solomeo</label>
                </value>
                <value>
                    <fullName>Bottle of olive oil</fullName>
                    <isActive>false</isActive>
                    <label>Bottle of olive oil</label>
                </value>
                <value>
                    <fullName>Bottle of wine</fullName>
                    <isActive>false</isActive>
                    <label>Bottle of wine</label>
                </value>
                <value>
                    <fullName>Chinese New Year gifting</fullName>
                    <isActive>false</isActive>
                    <label>Chinese New Year gifting</label>
                </value>
                <value>
                    <fullName>Cigars</fullName>
                    <isActive>false</isActive>
                    <label>Cigars</label>
                </value>
                <value>
                    <fullName>Holiday Gifting</fullName>
                    <isActive>false</isActive>
                    <label>Holiday Gifting</label>
                </value>
                <value>
                    <fullName>Other (insert a detailed description)</fullName>
                    <isActive>false</isActive>
                    <label>Other (insert a detailed description)</label>
                </value>
                <value>
                    <fullName>Serie Delighting</fullName>
                    <isActive>false</isActive>
                    <label>Serie Delighting</label>
                </value>
                <value>
                    <fullName>Styling emails</fullName>
                    <isActive>false</isActive>
                    <label>Styling emails</label>
                </value>
                <value>
                    <fullName>Very Special Gift</fullName>
                    <isActive>false</isActive>
                    <label>Very Special Gift</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia_Attivita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipologia Attività</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.Gift__c</field>
                <operation>equals</operation>
                <valueField>$Source.Gift__c</valueField>
            </filterItems>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.Attiva__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Evento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pannello_Amministrazione_Marketing__c</referenceTo>
        <relationshipName>Attivita_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>checkbox_temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox temp</label>
        <type>Checkbox</type>
    </fields>
    <label>Gift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data__c</columns>
        <columns>Tipologia_Attivita__c</columns>
        <columns>Product__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Descrizione__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift</pluralLabel>
    <recordTypes>
        <fullName>Direct_Marketing</fullName>
        <active>false</active>
        <label>Direct Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Collection</fullName>
        <active>true</active>
        <label>Gift Collection</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>